--- a/.env.example
+++ b/.env.example
@@ -1,6 +1,6 @@
 # Заполни и переименуй в .env (локальный запуск) или задай в Render → Environment
-BOT_TOKEN=1234567890:ABC_your_telegram_token
-CHANNEL_ID=@your_channel_or_chat_id
+BOT_TOKEN=8474914655:AAHu5Tv4sSJKQkHlebxg_9hwh_NrFJeg7zs
+CHANNEL_ID=@news_novorossia_auto
 
 # Google News locale
 NEWS_HL=ru
