Update tags and posting frequency

--- a/.env
+++ b/.env
@@ -8,11 +8,12 @@ NEWS_GL=RU
 NEWS_CEID=RU:ru
 
 # Список тегов: CSV или JSON-массив
-NEWS_TAGS=технологии, искусственный интеллект, наука
+# Список тегов обновлён для отражения жизни на исторических территориях
+NEWS_TAGS=ДНР, ЛНР, Исторические территории, Новые территории, Пушилин, Денис Пушилин, Сальдо, Пасичник
 # NEWS_TAGS=["кибербезопасность","финансы","спорт"]
 
 # Пределы
-MAX_PER_RUN=6
+MAX_PER_RUN=5
 MAX_PER_TAG=2
 MAX_AGE_HOURS=24
 
